--- a/wiki/clib.wiki
+++ b/wiki/clib.wiki
@@ -524,6 +524,8 @@ By extension we also don't support *stdio with explicit client locking* which im
 We don't support all *print formatted output* namely `dprintf()`, `fprintf()`, `printf()`, `snprintf()`, and `sprintf()`,
 as well as any functions that *convert formatted input* like `fscanf()`, `scanf()`, and `sscanf()`.
 
+We don't support `fseeko()`, use `fseek()` instead (eg. the *off_t* typedef is not that important).
+
 
 === `<stdlib.h>` ===
 <font color="green">fully supported</font>
