--- a/wiki/clib.wiki
+++ b/wiki/clib.wiki
@@ -524,7 +524,7 @@ By extension we also don't support *stdio with explicit client locking* which im
 We don't support all *print formatted output* namely `dprintf()`, `fprintf()`, `printf()`, `snprintf()`, and `sprintf()`,
 as well as any functions that *convert formatted input* like `fscanf()`, `scanf()`, and `sscanf()`.
 
-We don't support `fseeko()`, use `fseek()` instead (eg. the *off_t* typedef is not that important).
+We don't support `fseeko()`/`ftello()`, use `fseek()`/`ftell()` instead (eg. the *off_t* typedef is not that important).
 
 
 === `<stdlib.h>` ===
